<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:id="@+id/email_preference_category"
        android:title="@string/email_preference_category_title">
        <Preference
            android:id="@+id/email_preference"
            android:key="@string/email_preference_key"
            android:title="@string/email_preference_title"
            android:summary="@string/email_preference_summary" />
    </PreferenceCategory>
    
    <PreferenceCategory android:id="@+id/sms_preference_category"
        android:title="@string/sms_preference_category_title">
        <Preference
            android:id="@+id/sms_preference"
            android:key="@string/sms_preference_key"
            android:title="@string/sms_preference_title"
            android:summary="@string/sms_preference_summary" />
    </PreferenceCategory>
    
</PreferenceScreen>
